[package]
name = "lode-api"
description = "REST API interface for the Lode testing tool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lode-core = { path = "../lode-core" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

actix-web = "4.5"
actix-cors = "0.7"
actix-http = "3.6"
tracing-actix-web = "0.7"
dotenv = "0.15"
config = "0.15.11"

[dev-dependencies]
wiremock = { workspace = true }